<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:cropToPadding="true"
        android:focusable="true"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_friends" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView">

        <Button
            android:id="@+id/start_button"
            style="@style/Button_start_screen"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/start_party"
            android:textColor="@drawable/button_text_color_white" />

        <Button
            android:id="@+id/rules_button"
            style="@style/Button_start_screen"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/rules"
            android:textColor="@drawable/button_text_color_white" />

        <Button
            android:id="@+id/settings_button"
            style="@style/Button_start_screen"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/settings"
            android:textColor="@drawable/button_text_color_white" />

        <Button
            android:id="@+id/send_questions_button"
            style="@style/Button_start_screen"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/send_questions"
            android:textColor="@drawable/button_text_color_white" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>